Update text to include 'blood sports' in context

--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@ h2 {
 <h2 id="demo%E7%94%A8%E3%83%97%E3%83%AD%E3%83%B3%E3%83%97%E3%83%88">demo用プロンプト</h2>
 <pre is="marp-pre" data-auto-scaling="downscale-only"><code>「未経験者に向けて競馬の魅力を伝える」をテーマにLT用のスライド原稿を  
 Marp形式（Markdown）で出力して。
-ギャンブルとしてだけじゃなくて、ブラッドとしてのも語りたい。
+ギャンブルとしてだけじゃなくて、ブラッドスポーツとしての魅力も語りたい。
 </code></pre>
 <footer>スマホで完結するLT資料づくり</footer>
 </section>
